# Asteria

./: .gitignore  CLAUDE.md  CMakeLists.txt  Globals.cpp  Globals.h  app.rc  aspectarianwidget.cpp  aspectarianwidget.h  astro_types.cpp  astro_types.h  chartcalculator.cpp  chartcalculator.h  chartdatamanager.cpp  chartdatamanager.h  chartrenderer.cpp  chartrenderer.h  donationdialog.cpp  elementmodalitywidget.cpp  elementmodalitywidget.h  installer.iss  main.cpp  mainwindow.cpp  mainwindow.h  mistralapi.cpp  mistralapi.h  modelselectordialog.cpp  modelselectordialog.h  planetlistwidget.cpp  planetlistwidget.h  resources.qrc  transitsearchdialog.cpp
resources/: Davison_Relationship.md  Default.md  Natal_Birth.md  Secondary_Progression.md  Transits.md  Zodiac_Signs.md
